# unrar2-cffi

./: .gitignore  MANIFEST.in  build.sh  build_win.bat  buildconf.py  buildentry.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build.yml
patches/: 0001-build-retarget-to-vs2022-10.0-v143.patch
tests/: test_unrarlib.py
tools/: apply_patches.py
unrar/cffi/: __init__.py  rarfile.py  unrarlib.py  unrarlib_ext.c  unrarlib_ext.h
