[project]
name = "unrar2-cffi"
version = "0.1.0"
description = "Read RAR file from Python -- cffi edition"
readme = "README.md"
keywords = ["rar", "unrar", "archive", "cffi"]
license.file = "LICENSE"
authors = [
    { name = "Davide Romanini", email = "davide.romanini@gmail.com" },
    { name = "noaione", email = "noaione@n4o.xyz" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
urls = { "Source Code" = "https://github.com/noaione/unrar2-cffi" }
requires-python = ">=3.9"

[build-system]
requires = [
    "setuptools", "wheel", "packaging",
    "setuptools_scm", "cffi",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["unrar.cffi"]
package-dir = { "unrar.cffi" = "unrar/cffi" }
package-data = { "unrar.cffi" = ["*.dll"] }
include-package-data = true

[tool.setuptools.cmdclass]
build = "buildentry.BuildUnrarBeforeBuild"
build_unrar = "buildconf.BuildUnrarCommand"

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
